old_tests/success/misc/char_range/main.sk
module Main where

import Std.Util

main = do
       a <- case 'g' of
            'a'..'g' -> assert False
            'a'..='g' -> assert True
            _ -> assert False
