old_tests/fail/non_exhaustive_pattern_char/main.sk
module Main where

main = do
    a <- 'a'
    case a of
        'b' -> ()
